--- a/app/assets/stylesheets/v2/sass.scss.erb
+++ b/app/assets/stylesheets/v2/sass.scss.erb
@@ -52,3 +52,9 @@ $site-color: $blue;
   -o-appearance: $value;
   appearance: $value;
 }
+@mixin background-size($size) {
+  -webkit-background-size: $size;
+  -moz-background-size: $size;
+  -o-background-size: $size;
+  background-size: $size;
+}
