--- a/app/views/v2/pages/home.html.erb
+++ b/app/views/v2/pages/home.html.erb
@@ -1,4 +1,13 @@
-<%= image_tag 'cruz.jpg', id: "self" %>
+<%#= image_tag 'cruz.jpg', id: "self" %>
+
+<div class="slide" style="background-image: url(<%= asset_path 'cruz.jpg' %>)">
+  <h1>
+    Cruz Núñez
+  </h1>
+  <footer>
+    Fuckin' Boss
+  </footer>
+</div>
 
 <h3>About</h3>
 
@@ -7,3 +16,21 @@
   <code><a href="https://github.com/cruznunez">commit</a></code>
   to producing high-quality and meaningful work. If you want to team up and form amazing user experiences — you are very welcome to contact me.</code>
 </p>
+
+<div id="slide1" class="slide">
+  <h1>
+    Project 1
+  </h1>
+  <footer>
+    I like this project
+  </footer>
+</div>
+
+<div id="slide2" class="slide">
+  <h1>
+    Project 2
+  </h1>
+  <footer>
+    This project was lit 🔥
+  </footer>
+</div>
