--- a/app/assets/stylesheets/v2/navigation.scss
+++ b/app/assets/stylesheets/v2/navigation.scss
@@ -1,136 +1,117 @@
 @import 'sass';
-.click-area {
-  position: absolute;
-  width:100%;
-  height:100%;
-  top:0;
-  left: 0;
-  /* edit: added z-index */
-  z-index: 1;
-  /* fixes overlap error in IE7/8, make sure you have an empty gif */
-  // background-image: url('empty.gif');
+$background-color: #7F7F7F;
+
+.sidebar {
+  background-color: white;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.3em;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  // z-index: 1001;
+  transform: translateX(-100%);
+  &.active {
+    transform: translateX(0);
+  }
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    color: inherit;
+    &:hover {
+      background-color: darken($background-color, 5%);;
+    }
+  }
 }
 
-i.fa.fa-file-code-o {
-  font-size: 1.5em;
-}
-#nav {
-  line-height: 30px;
-  background-color: transparent;
-  height: auto;
-  width: 21%;
-  margin-top: 5vh;
+$time: 0.4s;
+$time-2: $time cubic-bezier(.77,0,.175,1);
+$background-color: transparent;
+$color: white;
+$active-color: black;
+$btn-width: 50px;
+$btn-height: round($btn-width*0.8);
+$bar-width: round($btn-width*0.625);
+$bar-height: round($bar-width*0.07);
+
+.transform-icon {
+  background: $background-color;
+  height: $btn-height;
+  width: $btn-width;
   position: absolute;
-  font-size: 0;
-  a {
-    font-size: 16px;
-  }
+  z-index: 1;
+  right: 0;
+  margin: 1em;
 }
-nav {
-  background-color: transparent;
-  height: auto;
-  width: 60%;
-  padding: 8px;
+.base {
+  background: $color;
+  height: $bar-height;
+  width: $bar-width;
+  position: absolute;
+  top: 0; bottom: 0; left: 0; right: 0;
   margin: auto;
-  @include tablet {
-    width: 80%;
+  transition: all $time;
+  &::before,
+  &::after {
+    background: $color;
+    height: $bar-height;
+    width: 100%;
+    position: absolute;
+    content: '';
+    transition: all $time;
+  }
+  &::before {
+    top: -$bar-width*.29;
+  }
+  &::after {
+    top: $bar-width*.29;
   }
 }
-.update-button {
-  background: $green !important;
-  border: 2px solid $green !important;
-  @include immobile {
-    &:hover {
-      color: $green !important;
+.x-fancy-base {
+  @extend .base;
+  transition: all $time-2;
+  &::before, &::after {
+    transition: all $time-2;
+    right: 0;
+  }
+  &.active {
+    height: 0;
+    background: $active-color;
+    &::before, &::after {
+      background: $active-color;
+      top: 0px;
     }
   }
 }
-.red-button {
-  background-color: $red-button !important;
-  border: 2px solid $red-button !important;
-  @include immobile {
-    &:hover {
-      color: $red-button !important;
+.x-fancy-3 {
+  &:hover {
+    i::before {
+      right: -$bar-width*.176;
+    }
+    i::after {
+      right: $bar-width*.176;
+    }
+    .active::before,
+    .active::after {
+      right: 0;
     }
   }
 }
-.big-button {
-  border: 2px solid $site-color;
-  &:focus {
-    outline: 0;
-  }
-}
-.button, .big-button {
-  @include appearance(none);
-  position: relative;
-  text-align: center;
-  margin-bottom: 8px;
-  border-radius: 8px;
-  -moz-border-radius: 8px;
-  -webkit-border-radius: 8px;
-  width: 100%;
-  background: $site-color;
-  color: #fff;
-  font-size: 15px;
-  font-weight: bold;
-  padding: 6px 0;
-  text-decoration: none;
-  transition: all 0.3s;
-  @include immobile {
-    display: inline-block;
-    border: 2px solid $site-color;
-    &:hover {
-      background-color: white !important;
-      color: $site-color;
-    }
-  }
-  &:active {
-    position: relative;
-    top: 1px;
-  }
+.x-fancy-3 {
   i {
-    display: none;
-  }
-}
-.selected {
-  @include mobile {
-    color: $site-color;
-  }
-  @include immobile {
-    color: white;
-  }
-}
-@include mobile {
-  #nav {
-    bottom: 0;
-    width: 100%;
-    background-color: white;
-    margin: 0;
-    line-height: 18px;
-    border-top: 1px solid #BBB;
-    height: 45px;
-    z-index: 9999;
-    position: fixed;
-  }
-  nav {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    padding: 7px 0 0;
-  }
-  .button {
-    width: 32%;
-    color: #8899A6;
-    background-color: white;
-    padding: 0;
-    font-size: 12.8px;
-  }
-  .button, .big-button {
-    display: block;
-    i {
-      display: block;
-      line-height: .8;
-      font-size: 1.7em;
+    @extend .x-fancy-base;
+    &.active {
+      // height: $bar-height;
+      transform: rotate(135deg);
+      &::before {
+        transform: rotate(90deg);
+      }
+      &::after {
+        transform: rotate(0deg);
+      }
     }
   }
 }
