--- a/app/views/v2/pages/home.html.erb
+++ b/app/views/v2/pages/home.html.erb
@@ -1,36 +1,38 @@
 <%#= image_tag 'cruz.jpg', id: "self" %>
+<div class="container">
+  <div class="slide" style="background-image: url(<%= asset_path 'cruz.jpg' %>)">
+    <h1>
+      Cruz Núñez
+    </h1>
+    <footer>
+      Fuckin' Boss
+    </footer>
+  </div>
 
-<div class="slide" style="background-image: url(<%= asset_path 'cruz.jpg' %>)">
-  <h1>
-    Cruz Núñez
-  </h1>
-  <footer>
-    Fuckin' Boss
-  </footer>
-</div>
+  <h3>About</h3>
 
-<h3>About</h3>
+  <p>
+    I am a Ruby on Rails graduate from The Iron Yard in Durham, NC. I'm currently searching for a position in the Triangle Area to develop my skills as a programmer. I
+    <code><a href="https://github.com/cruznunez">commit</a></code>
+    to producing high-quality and meaningful work. If you want to team up and form amazing user experiences — you are very welcome to contact me.</code>
+  </p>
 
-<p>
-  I am a Ruby on Rails graduate from The Iron Yard in Durham, NC. I'm currently searching for a position in the Triangle Area to develop my skills as a programmer. I
-  <code><a href="https://github.com/cruznunez">commit</a></code>
-  to producing high-quality and meaningful work. If you want to team up and form amazing user experiences — you are very welcome to contact me.</code>
-</p>
+  <div id="slide1" class="slide">
+    <h1>
+      Project 1
+    </h1>
+    <footer>
+      I like this project
+    </footer>
+  </div>
 
-<div id="slide1" class="slide">
-  <h1>
-    Project 1
-  </h1>
-  <footer>
-    I like this project
-  </footer>
-</div>
+  <div id="slide2" class="slide">
+    <h1>
+      Project 2
+    </h1>
+    <footer>
+      This project was lit 🔥
+    </footer>
+  </div>
 
-<div id="slide2" class="slide">
-  <h1>
-    Project 2
-  </h1>
-  <footer>
-    This project was lit 🔥
-  </footer>
 </div>
