--- a/app/assets/stylesheets/v2/home.scss
+++ b/app/assets/stylesheets/v2/home.scss
@@ -11,19 +11,19 @@
   // momentum scrolling. usually improves experience, but here, leave disabled
   // -webkit-overflow-scrolling: touch;
 }
-html {
+// html {
+.main-content {
   @extend .scroll;
 }
-body {
+// // body {
+.container {
   @extend .scroll;
   height: 100vh;
 }
-// .container {
-//   @extend .scroll;
-//   height: 100vh;
-// }
+
 .slide {
   background: center/cover fixed;
+  // background: center/cover;
   height: 100vh;
   width: 100%;
 }
@@ -56,5 +56,6 @@ body {
   background-image: url('http://all4desktop.com/data_images/original/4238689-nature-background.jpg');
 }
 #slide2 {
-  background-image: url('http://marshall.org/wp-content/themes/marshall/img/featured-space-policy.jpg')
+  // background-image: url('https://i.ytimg.com/vi/KAkVxmXAhQo/maxresdefault.jpg');
+  background-image: url('http://wallpapershome.com/images/wallpapers/earth-2560x1440-planet-space-10121.jpg');
 }
