--- a/app/views/v2/layouts/_navigation.html.erb
+++ b/app/views/v2/layouts/_navigation.html.erb
@@ -1,8 +1,4 @@
-<!-- <span class="nav-toggle" onclick="navToggle();">
-  <i class="fa fa-bars" aria-hidden="true"></i>
-</span> -->
-
-<div class="transform-icon x-fancy-3">
+<div class="transform-icon x-fancy-3-reverse">
   <i></i>
 </div>
 
