Replace phone with version

--- a/app/views/v1/layouts/_header.html.erb
+++ b/app/views/v1/layouts/_header.html.erb
@@ -26,9 +26,9 @@
     </a>
   </div>
   <div class="contact-info">
-    <a href="tel:919-593-2828" class="white-underline phone">
-      <i class="fa fa-phone"></i>
-      <span class="text">(919) 593 2828</span>
+    <a href="/v2" class="white-underline phone">
+      <i class="fa fa-vimeo-square"></i>
+      <span class="text">Version 2</span>
     </a>
   </div>
 </div>
