--- a/app/views/v1/layouts/_main.html.erb
+++ b/app/views/v1/layouts/_main.html.erb
@@ -1,4 +1,4 @@
 <%= site_color %>
 <%= render 'v1/layouts/header' %>
 <%= render 'v1/layouts/navigation' %>
-<%= render 'layouts/version'  %>
+<%#= render 'layouts/version'  %>
