--- a/app/views/v2/pages/home.html.erb
+++ b/app/views/v2/pages/home.html.erb
@@ -5,7 +5,7 @@
       Cruz Núñez
     </h1>
     <footer>
-      Fuckin' Boss
+      Software Enginner
     </footer>
   </div>
 
@@ -25,6 +25,8 @@
       I like this project
     </footer>
   </div>
+
+  <h3>Words words</h3>
 
   <div id="slide2" class="slide">
     <h1>
