--- a/app/assets/stylesheets/v1/sass.scss.erb
+++ b/app/assets/stylesheets/v1/sass.scss.erb
@@ -52,3 +52,11 @@ $site-color: $blue;
   -o-appearance: $value;
   appearance: $value;
 }
+
+@mixin transform($value) {
+  -webkit-transform: $value;
+  -moz-transform: $value;
+  -ms-transform: $value;
+  -o-transform: $value;
+  transform: $value;
+}
