--- a/app/views/v1/layouts/_header.html.erb
+++ b/app/views/v1/layouts/_header.html.erb
@@ -6,29 +6,33 @@
     <%= @page == 'Home' ? 'Software Developer' : @page %>
   </h2>
 </section>
-<div class="container container-white">
-  <div class="contact-info">
-    <a href="https://www.linkedin.com/in/cruznunez" class="white-underline" target="_blank">
-      <i class="fa fa-linkedin-square"></i>
-      <span class="text">Cruz A. Núñez</span>
-    </a>
+<div class="flex-container justify-between contact-info-container">
+  <div class="contact-info-half">
+    <div class="contact-info">
+      <a href="https://www.linkedin.com/in/cruznunez" class="white-underline" target="_blank">
+        <i class="fa fa-linkedin-square"></i>
+        <span class="text">Cruz A. Núñez</span>
+      </a>
+    </div>
+    <div class="contact-info">
+      <a href="https://github.com/cruznunez" class="white-underline" target="_blank">
+        <i class="fa fa-github-square"></i>
+        <span class="text">cruznunez</span>
+      </a>
+    </div>
   </div>
-  <div class="contact-info">
-    <a href="https://github.com/cruznunez" class="white-underline" target="_blank">
-      <i class="fa fa-github-square"></i>
-      <span class="text">cruznunez</span>
-    </a>
-  </div>
-  <div class="contact-info">
-    <a href="mailto:nunez.a.cruz@gmail.com" class="white-underline email">
-      <i class="fa fa-envelope"></i>
-      <span class="text">nunez.a.cruz@gmail.com</span>
-    </a>
-  </div>
-  <div class="contact-info">
-    <a href="/v2" class="white-underline phone">
-      <i class="fa fa-vimeo-square"></i>
-      <span class="text">Version 2</span>
-    </a>
+  <div class="contact-info-half">
+    <div class="contact-info">
+      <a href="mailto:nunez.a.cruz@gmail.com" class="white-underline email">
+        <i class="fa fa-envelope"></i>
+        <span class="text">nunez.a.cruz@gmail.com</span>
+      </a>
+    </div>
+    <div class="contact-info">
+      <a href="/v2" class="white-underline phone">
+        <i class="fa fa-vimeo-square"></i>
+        <span class="text">Version 2</span>
+      </a>
+    </div>
   </div>
 </div>
