--- a/app/views/v2/pages/home.html.erb
+++ b/app/views/v2/pages/home.html.erb
@@ -1,4 +1,13 @@
 <%#= image_tag 'cruz.jpg', id: "self" %>
+
+<a href="/v2">
+  <div class="wtf">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</a>
+
 <div class="container">
   <div class="slide" style="background-image: url(<%= asset_path 'cruz.jpg' %>)">
     <h1>
