--- a/app/assets/javascripts/log_in.js.erb
+++ b/app/assets/javascripts/log_in.js.erb
@@ -1,9 +1,9 @@
 function logIn() {
-  window.location.href = "/log_in";
+  window.location.href = "/v1/log_in";
 };
 
 function logOut() {
-  window.location.href = "/log_out";
+  window.location.href = "/v1/log_out";
 };
 
 function users() {
@@ -11,7 +11,7 @@ function users() {
 };
 
 function tech() {
-  window.location.href = "/technologies";
+  window.location.href = "/v1/technologies";
 };
 
 function colors() {
