--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,9 +18,9 @@
     </a>
   </div>
   <div class="contact-info">
-    <a href="tel:919-593-2828" class="black-underline phone">
-      <i class="fa fa-phone"></i>
-      (919) 593 2828
+    <a href="/v2" class="black-underline phone">
+      <i class="fa fa-vimeo-square"></i>
+      <span class="text">Version 2</span>
     </a>
   </div>
 </div>
