--- a/app/assets/stylesheets/v1/pagination.scss
+++ b/app/assets/stylesheets/v1/pagination.scss
@@ -1,29 +1,64 @@
 @import 'sass';
+
+// bootstrap
 .pagination {
-  display: table;
-  table-layout: fixed;
-  text-align: center;
-  @include immobile {
-    margin: 0 auto;
-  }
-  @include mobile {
-    width: 100%;
-  }
+  display: inline-block;
+  padding-left: 0;
+  margin: 20px 0;
+  border-radius: 4px;
 }
-.current, .first, .last, .next, .prev {
-  display: table-cell;
-  @include immobile {
-    min-width: 25px;
-  }
+.pagination > li {
+  display: inline;
 }
-.page {
-  display: none;
+.pagination > li > a,
+.pagination > li > span {
+  position: relative;
+  float: left;
+  padding: 6px 12px;
+  line-height: 1.42857143;
+  text-decoration: none;
+  color: #337ab7;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  margin-left: -1px;
 }
-.page.current {
-  display: table-cell;
+.pagination > li:first-child > a,
+.pagination > li:first-child > span {
+  margin-left: 0;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
 }
-.first, .prev, .next, .last {
-  a {
-    color: $site-color !important;
-  }
+.pagination > li:last-child > a,
+.pagination > li:last-child > span {
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.pagination > li > a:hover, .pagination > li > a:focus,
+.pagination > li > span:hover,
+.pagination > li > span:focus {
+  z-index: 2;
+  color: #23527c;
+  background-color: #eeeeee;
+  border-color: #ddd;
+}
+.pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus,
+.pagination > .active > span,
+.pagination > .active > span:hover,
+.pagination > .active > span:focus {
+  z-index: 3;
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #337ab7;
+  cursor: default;
+}
+.pagination > .disabled > span,
+.pagination > .disabled > span:hover,
+.pagination > .disabled > span:focus,
+.pagination > .disabled > a,
+.pagination > .disabled > a:hover,
+.pagination > .disabled > a:focus {
+  color: #777777;
+  background-color: #fff;
+  border-color: #ddd;
+  cursor: not-allowed;
 }
