Add images and improve JS

--- a/app/assets/stylesheets/v2/home.scss
+++ b/app/assets/stylesheets/v2/home.scss
@@ -57,8 +57,9 @@
 }
 #slide1 {
   background-image: url('http://all4desktop.com/data_images/original/4238689-nature-background.jpg');
+  // background-image: asset_url('1landscapecolor.jpg');
 }
 #slide2 {
-  // background-image: url('https://i.ytimg.com/vi/KAkVxmXAhQo/maxresdefault.jpg');
   background-image: url('http://wallpapershome.com/images/wallpapers/earth-2560x1440-planet-space-10121.jpg');
+  // background-image: asset_url('2landscapecolor.jpg');
 }
