--- a/app/views/v2/pages/home.html.erb
+++ b/app/views/v2/pages/home.html.erb
@@ -9,7 +9,7 @@
 </a>
 
 <div class="container">
-  <div class="slide" style="background-image: url(<%= asset_path 'cruz.jpg' %>)">
+  <div class="slide" style="background-image: url(<%= asset_path '4landscapecolor.jpg' %>)">
     <h1>
       Cruz Núñez
     </h1>
@@ -39,23 +39,47 @@
 
   <!-- <div id="slide1" class="slide">
     <h1>
-      Project 1
+      Cruz Núñez
     </h1>
     <footer>
-      I like this project
+      Full-stack Developer
     </footer>
+    <div>
+      <%= link_to 'https://www.linkedin.com/in/cruznunez', class: 'link' do %>
+        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+      <% end %>
+      <%= link_to 'https://github.com/cruznunez', class: 'link' do %>
+        <i class="fa fa-github-square" aria-hidden="true"></i>
+      <% end %>
+      <%= link_to 'mailto:nunez.a.cruz@gmail.com', class: 'link' do %>
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+      <% end %>
+    </div>
   </div>
 
   <h3>Words words</h3>
 
   <div id="slide2" class="slide">
     <h1>
-      Project 2
+      Cruz Núñez
     </h1>
     <footer>
-      This project was lit 🔥
+      Full-stack Developer
     </footer>
-  </div> -->
+    <div>
+      <%= link_to 'https://www.linkedin.com/in/cruznunez', class: 'link' do %>
+        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+      <% end %>
+      <%= link_to 'https://github.com/cruznunez', class: 'link' do %>
+        <i class="fa fa-github-square" aria-hidden="true"></i>
+      <% end %>
+      <%= link_to 'mailto:nunez.a.cruz@gmail.com', class: 'link' do %>
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+      <% end %>
+    </div>
+  </div>
+
+  <h3>lmao</h3> -->
 
   <% @projects.each do |project| %>
     <div class="container">
