--- a/app/views/v1/pages/home.html.erb
+++ b/app/views/v1/pages/home.html.erb
@@ -1,4 +1,5 @@
-<%= image_tag 'cruz.jpg', id: "self" %>
+<%#= image_tag 'cruz.jpg', id: "self" %>
+<%= image_tag '5landscapecolor.jpg', id: "self" %>
 
 <h3>About</h3>
 
