--- a/app/assets/stylesheets/v2/home.scss
+++ b/app/assets/stylesheets/v2/home.scss
@@ -24,6 +24,7 @@
 .slide {
   background: center/cover fixed;
   // background: center/cover;
+  box-shadow: inset 0 1em 10em rgba(0,0,0,0.7);
   height: 100vh;
   width: 100%;
 }
