--- a/app/assets/stylesheets/v1/sass.scss.erb
+++ b/app/assets/stylesheets/v1/sass.scss.erb
@@ -14,6 +14,7 @@ $purple: #9b59b6;
 $dark-purple: #2a206b;
 $red-button: #e82e1e;
 $site-color: $blue;
+$gray: #606c71;
 
 @mixin mobile {
   @media only screen and (min-width: 1px) and  (max-width: #{$phone-width}) {
