Update pagination to respect currentColor

--- a/app/assets/stylesheets/v1/footer.scss
+++ b/app/assets/stylesheets/v1/footer.scss
@@ -6,7 +6,7 @@ div.container-black {
   background: white;
   color: black;
   padding: 15px 5%;
-  z-index: 1;
+  z-index: 4; // has to beat pagination max z-index of 3
   @include mobile {
     display: none;
   }
