--- a/app/assets/stylesheets/v1/pagination.scss
+++ b/app/assets/stylesheets/v1/pagination.scss
@@ -10,6 +10,7 @@
 .pagination > li {
   display: inline;
 }
+// top level pagination styling
 .pagination > li > a,
 .pagination > li > span {
   position: relative;
@@ -17,7 +18,8 @@
   padding: 6px 12px;
   line-height: 1.42857143;
   text-decoration: none;
-  color: #337ab7;
+  // color: #337ab7;
+  color: currentColor;
   background-color: #fff;
   border: 1px solid #ddd;
   margin-left: -1px;
@@ -33,23 +35,26 @@
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
 }
+// when you hover over a page link
 .pagination > li > a:hover, .pagination > li > a:focus,
 .pagination > li > span:hover,
 .pagination > li > span:focus {
   z-index: 2;
-  color: #23527c;
   background-color: #eeeeee;
   border-color: #ddd;
 }
+// this is the base styling for the page link
 .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus,
 .pagination > .active > span,
 .pagination > .active > span:hover,
 .pagination > .active > span:focus {
   z-index: 3;
-  color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: currentColor;
+  border-color: currentColor;
   cursor: default;
+}
+.page-text {
+  color: #fff;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
