Add flex to footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="container container-black">
+<div class="container flex-container justify-between container-black">
   <div class="contact-info">
     <a href="https://www.linkedin.com/in/cruznunez" class="black-underline">
       <i class="fa fa-linkedin-square"></i>
