--- a/app/views/v1/pages/_site_color.html.erb
+++ b/app/views/v1/pages/_site_color.html.erb
@@ -5,4 +5,10 @@
   p a {
     color: <%= color %>;
   }
+  .background-color {
+    background-color: <%= color %>;
+  }
+  .border-color {
+    border-color: <%= color %>;
+  }
 </style>
