--- a/app/views/v1/projects/_form.html.erb
+++ b/app/views/v1/projects/_form.html.erb
@@ -50,6 +50,8 @@
     <%= f.text_area :additional_information %>
   </div>
   <div class="actions">
-    <%= f.submit class: "big-button update-button" %>
+    <span class="background-color border-color">
+      <%= f.submit class: "big-button update-button" %>
+    </span>
   </div>
 <% end %>
