--- a/app/views/v1/projects/index.html.erb
+++ b/app/views/v1/projects/index.html.erb
@@ -6,6 +6,10 @@
       <i class="fa fa-plus"></i> Add Project
     <% end %>
   </div>
+<% else %>
+  <div class="flex-container">
+    <p><%= page_entries_info @projects %></p>
+  </div>
 <% end %>
 
 
