--- a/app/assets/stylesheets/v1/navigation.scss
+++ b/app/assets/stylesheets/v1/navigation.scss
@@ -37,6 +37,7 @@ nav {
   }
 }
 .update-button {
+  color: white;
   background: $green !important;
   border: 2px solid $green !important;
   @include immobile {
@@ -54,10 +55,16 @@ nav {
     }
   }
 }
-.big-button {
-  border: 2px solid $site-color;
+.big-button, input.big-button {
+  border: 2px solid;
+  // color: white;
+  background-color: inherit;
+  border-color: inherit;
   &:focus {
     outline: 0;
+  }
+  &:hover {
+    color: inherit;
   }
 }
 .button, .big-button {
