--- a/app/assets/stylesheets/v2/home.scss
+++ b/app/assets/stylesheets/v2/home.scss
@@ -28,10 +28,20 @@
   height: 100vh;
   width: 100%;
 }
+.slide-2 {
+  background: center/contain no-repeat;
+  background-color: black;
+  box-shadow: inset 0 1em 10em rgba(0,0,0,0.7);
+  height: 60vh;
+  width: 100%;
+  @include mobile {
+    background: center/cover;
+  }
+}
 
 // Somewhat important stuff
 
-.slide {
+.slide, .slide-2 {
   color: white;
   font: 3vw "Exo", sans-serif;
   text-shadow: 0 0 0.4em rgba(0,0,0,1);
@@ -45,7 +55,7 @@
     font-size: 8vw;
     // font-size: 8vmax;
     margin: 0 0 .68em 0;
-    text-shadow: 0 0 0.3em rgba(0,0,0,1);
+    text-shadow: 0 0 0.25em black;
   }
   footer {
     font-style: italic;
@@ -53,14 +63,33 @@
     font-size: 3vmax;
   }
 }
+
 .slide-divider {
   padding: 0 1em;
 }
 #slide1 {
-  background-image: url('http://all4desktop.com/data_images/original/4238689-nature-background.jpg');
-  // background-image: asset_url('1landscapecolor.jpg');
-}
-#slide2 {
   background-image: url('http://wallpapershome.com/images/wallpapers/earth-2560x1440-planet-space-10121.jpg');
   // background-image: asset_url('2landscapecolor.jpg');
+}
+#slide2 {
+  filter: saturate(2.5);
+  h1 {
+    text-shadow: 0 0 0.2em black;
+  }
+  background-image: asset_url('simulation-theory.jpg');
+}
+#slide3 {
+  background-image: asset_url('simulation-theory-2.jpg');
+}
+#slide4 { // niceee
+  h1 {
+    text-shadow: 0 0 0.3em black;
+  }
+  background-image: asset_url('waves.jpg');
+}
+#slide5 {
+  background-image: asset_url('ai.jpg');
+  h1 {
+    text-shadow: 0 0 0.2em black;
+  }
 }
