--- a/app/assets/stylesheets/v2/projects.scss
+++ b/app/assets/stylesheets/v2/projects.scss
@@ -1,4 +1,45 @@
 @import 'sass';
+// v2 stuff
+.projects-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0 1em;
+
+  .project {
+    background: center/cover;
+    color: white;
+    margin-bottom: 3em;
+    text-shadow: 0 0 0.3em rgba(0,0,0,0.6);
+
+    // height: 22.5vw; width: 40vw;
+    // height: 23.6vw; width: 42vw;
+    // height: 24.7vw; width: 44vw;
+    // height: 25.3vw; width: 45vw;
+    // height: 25.3vw; width: 45vw;
+    // height: 25.9vw; width: 46vw;
+    height: 26.4vw; width: 47vw;
+
+    .project-title {
+      align-items: center;
+      background: rgba(0,0,0,0.6);
+      display: flex;
+      font-size: 2.5em;
+      height: 100%;
+      justify-content: space-around;
+      text-align: center;
+      transition: opacity 0.25s;
+      opacity: 0;
+      width: 100%;
+    }
+
+    &:hover .project-title {
+      opacity: 1;
+    }
+  }
+}
+
+// old stuff
 .technologies {
   margin-bottom: 1em;
 }
@@ -66,16 +107,6 @@ a.pop:hover {
   text-decoration: none;
   font-size: 110%;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.25);
-}
-.project-title {
-  font-size: 1.3em;
-  color: inherit;
-}
-.project-title,
-.underline {
-  &:hover {
-    border-bottom: 2.5px solid $site-color;
-  }
 }
 .flex-container {
   display: -webkit-box;
