--- a/app/views/v2/pages/home.html.erb
+++ b/app/views/v2/pages/home.html.erb
@@ -30,74 +30,32 @@
   </div>
 
   <div class="slide-divider">
-    <h3>About</h3>
+    <h1>About</h1>
 
     <p>
       Hello, I'm Cruz Nunez. I'm a full-stack web developer working for Code the Dream. I love to create living, breathing websites that fill the needs around me. Feel free to contact me with questions or ideas that we can work on together.
     </p>
+    <hr>
   </div>
 
-  <!-- <div id="slide1" class="slide">
-    <h1>
-      Cruz Núñez
-    </h1>
-    <footer>
-      Full-stack Developer
-    </footer>
-    <div>
-      <%= link_to 'https://www.linkedin.com/in/cruznunez', class: 'link' do %>
-        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-      <% end %>
-      <%= link_to 'https://github.com/cruznunez', class: 'link' do %>
-        <i class="fa fa-github-square" aria-hidden="true"></i>
-      <% end %>
-      <%= link_to 'mailto:nunez.a.cruz@gmail.com', class: 'link' do %>
-        <i class="fa fa-envelope" aria-hidden="true"></i>
-      <% end %>
-    </div>
+
+  <div class="slide-divider">
+    <h1>Projects</h1>
   </div>
 
-  <h3>Words words</h3>
-
-  <div id="slide2" class="slide">
-    <h1>
-      Cruz Núñez
-    </h1>
-    <footer>
-      Full-stack Developer
-    </footer>
-    <div>
-      <%= link_to 'https://www.linkedin.com/in/cruznunez', class: 'link' do %>
-        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+  <div class="projects-container">
+    <% @projects.each do |project| %>
+      <%= link_to v2_project_path(project) do %>
+        <div class="project" style="background-image: url(<%= project.image.link %>)">
+          <div class="project-title"><%= project.name %></div>
+        </div>
       <% end %>
-      <%= link_to 'https://github.com/cruznunez', class: 'link' do %>
-        <i class="fa fa-github-square" aria-hidden="true"></i>
-      <% end %>
-      <%= link_to 'mailto:nunez.a.cruz@gmail.com', class: 'link' do %>
-        <i class="fa fa-envelope" aria-hidden="true"></i>
-      <% end %>
-    </div>
+    <% end %>
   </div>
 
-  <h3>lmao</h3> -->
-
-  <% @projects.each do |project| %>
-    <div class="container">
-      <div class="slide" style="background-image: url(<%= project.image.link %>)">
-        <h1>
-          <%= project.name %>
-        </h1>
-      </div>
-    </div>
-
-    <div class="slide-divider">
-      <p>
-        <%= project.description.html_safe %>
-      </p>
-
-      <p>
-        <%= project.additional_information.html_safe %>
-      </p>
-    </div>
-  <% end %>
+  <div class="flex justify-center mb">
+    <%= link_to v2_projects_path do %>
+      <h1>See all projects</h1>
+    <% end %>
+  </div>
 </div>
