--- a/app/views/v2/projects/index.html.erb
+++ b/app/views/v2/projects/index.html.erb
@@ -1,50 +1,32 @@
-<% if logged_in? %>
-  <div class="flex-container">
-    <%= link_to new_v1_project_path, id: 'add-project', class: 'flex-right' do %>
-      <i class="fa fa-plus"></i> Add Project
-    <% end %>
+<a href="/v2">
+  <div class="wtf">
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
-<% end %>
+</a>
 
-<% @projects.each do |project| %>
-  <div class="project" id="<%= project.id %>">
-    <div class="flex-container">
-      <h3>
-        <%= link_to project.name, project.live_site, class: "project-title", target: "_blank" %>
-      </h3>
-      <% if logged_in? %>
-        <%= link_to edit_v1_project_path(project), class: 'edit-project flex-right' do %>
-          <i class="fa fa-pencil"></i> Edit
-        <% end %>
+<div class="container">
+
+  <div id="slide2" class="slide">
+    <h1>
+      Projects
+    </h1>
+  </div>
+
+  <div class="slide-divider">
+    <h1>Projects</h1>
+  </div>
+
+  <div class="projects-container">
+    <% @projects.each do |project| %>
+      <%= link_to v2_project_path(project) do %>
+        <div class="project" style="background-image: url(<%= project.image.link %>)">
+          <div class="project-title"><%= project.name %></div>
+        </div>
       <% end %>
-    </div>
-    <% if project.image.present? %>
-      <%= link_to project.live_site, target: "_blank" do %>
-        <%= image_tag project.image.link, class: 'shadow'%>
-      <% end %>
-    <% end %>
-    <p>
-      <%= project.description.html_safe %>
-    </p>
-    <%= render "technologies", project: project %>
-    <div>
-      <div class="twins">
-        <%= link_to project.live_site, class: "pop", target: "_blank" do %>
-          <i class="fa fa-hand-o-up fa-lg project-icon"></i>
-          Live Site
-        <% end %>
-      </div>
-      <div class="twins">
-        <%= link_to project.repo_url, class: "pop", target: "_blank" do %>
-          <i class="fa fa-github-square fa-lg project-icon"></i>
-          Github Repo
-        <% end %>
-      </div>
-    </div>
-    <% if project.additional_information.present? %>
-      <p><%= project.additional_information.html_safe %></p>
     <% end %>
   </div>
-<% end %>
+</div>
 
 <%= paginate @projects  %>
